--- a/day26/assets/css/style.css
+++ b/day26/assets/css/style.css
@@ -440,6 +440,8 @@ body {
     height: 500px;
     overflow: auto;
     scroll-behavior: smooth;
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
 }
 
 .lyric::-webkit-scrollbar {
@@ -455,6 +457,12 @@ body {
 .lyric::-webkit-scrollbar-track {
     background-color: #ccc;
     border-radius: 100rem;
+}
+
+
+.lyric::-webkit-scrollbar {
+    width: 0 !important;
+    display: none;
 }
 
 .karaoke-content .btn-karaoke-hidden {
